--- a/locales/fr_FR.lang
+++ b/locales/fr_FR.lang
@@ -3,6 +3,7 @@
  */
 
 #define SHIFT 0x80
+#define ALTGR 0x40
 const uint8_t _asciimap[128] =
 {
  	0x00,             // NUL
@@ -49,7 +50,7 @@ const uint8_t _asciimap[128] =
  	0x22,          // (
  	0x2d,          // )
  	0x31,          // *
- 	0x2b|SHIFT,    // +
+ 	0x2e|SHIFT,    // +
  	0x10,          // ,
  	0x23,          // -
  	0x36|SHIFT,    // .
@@ -70,7 +71,7 @@ const uint8_t _asciimap[128] =
  	0x2e,          // =
  	0x64|SHIFT,      // >
  	0x10|SHIFT,      // ?
- 	0xa7,            // @ :TODO
+ 	0x27|ALTGR,      // @
  	0x14|SHIFT,      // A
  	0x05|SHIFT,      // B
  	0x06|SHIFT,      // C
@@ -98,7 +99,7 @@ const uint8_t _asciimap[128] =
  	0x1c|SHIFT,      // Y
  	0x1a|SHIFT,      // Z
  	0x0c,          // [ :TODO
- 	0x31,          // bslash
+ 	0x31,          // bslash :TODO
  	0x0d,          // ] :TODO
  	0x2f,          // ^
  	0x25,          // _
@@ -134,4 +135,4 @@ const uint8_t _asciimap[128] =
  	0x30|SHIFT,    // } :TODO
  	0x35|SHIFT,    // ~ :TODO
  	0				// DEL
- };
+};
