--- a/locales/fr_FR.lang
+++ b/locales/fr_FR.lang
@@ -1,5 +1,5 @@
 /*
- * _asciimap took from internet, some bugs, need to be revised
+ * _asciimap took from internet, fixed by Thecakeisgit
  */
 
 #define SHIFT 0x80
@@ -135,135 +135,28 @@ const uint8_t _asciimap[128] =
    0x1f,    // ~
    0        // DEL
 };
-const bool _altGrMap[128] =
-{
-  false,             // NUL
-  false,             // SOH
-  false,             // STX
-  false,             // ETX
-  false,             // EOT
-  false,             // ENQ
-  false,             // ACK
-  false,             // BEL
-  false,     // BS Backspace
-  false,     // TAB  Tab
-  false,     // LF Enter
-  false,             // VT
-  false,             // FF
-  false,             // CR
-  false,             // SO
-  false,             // SI
-  false,             // DEL
-  false,             // DC1
-  false,             // DC2
-  false,             // DC3
-  false,             // DC4
-  false,             // NAK
-  false,             // SYN
-  false,             // ETB
-  false,             // CAN
-  false,             // EM
-  false,             // SUB
-  false,             // ESC
-  false,             // FS
-  false,             // GS
-  false,             // RS
-  false,             // US
 
-  false,      //  ' '
-  false,          // !
-  false,          // "
-  true,       // #
-  false,          // $
-  false,          // %
-  false,          // &
-  false,          // '
-  false,          // (
-  false,          // )
-  false,          // *
-  false,          // +
-  false,          // ,
-  false,          // -
-  false,    // .
-  false,    // /
-  false,    // 0
-  false,    // 1
-  false,    // 2
-  false,    // 3
-  false,    // 4
-  false,    // 5
-  false,    // 6
-  false,    // 7
-  false,    // 8
-  false,    // 9
-  false,      // :
-  false,      // ;
-  false,        // <
-  false,      // =
-  false,        // >
-  false,      // ?
-  true,       // @
-  false,      // A
-  false,      // B
-  false,      // C
-  false,      // D
-  false,      // E
-  false,      // F
-  false,      // G
-  false,      // H
-  false,      // I
-  false,      // J
-  false,      // K
-  false,      // L
-  false,      // M
-  false,      // N
-  false,      // O
-  false,      // P
-  false,      // Q
-  false,      // R
-  false,      // S
-  false,      // T
-  false,      // U
-  false,      // V
-  false,      // W
-  false,      // X
-  false,      // Y
-  false,      // Z
-  true,     // [
-  true,     // bslash
-  true,     // ]
-  true,     // ^
-  false,          // _
-  true,     // `
-  false,          // a
-  false,          // b
-  false,          // c
-  false,          // d
-  false,          // e
-  false,          // f
-  false,          // g
-  false,          // h
-  false,          // i
-  false,          // j
-  false,          // k
-  false,          // l
-  false,          // m
-  false,          // n
-  false,          // o
-  false,          // p
-  false,          // q
-  false,          // r
-  false,          // s
-  false,          // t
-  false,          // u
-  false,          // v
-  false,          // w
-  false,          // x
-  false,          // y
-  false,          // z
-  true,     // {
-  true,     // |
-  true,     // }
-  true,     // ~
-  0         // DEL
-};
+// Init var
+bool _altGrMap[128];
+bool _altFine = false;
+
+// Individually define all needed char
+void initAltGr() {
+  _altFine = true;
+
+  _altGrMap[35] = true; // #
+  _altGrMap[64] = true; // @
+  
+  _altGrMap[91] = true; // [
+  _altGrMap[92] = true; // bslash
+  _altGrMap[93] = true; // ]
+  _altGrMap[94] = true; // ^
+  
+  _altGrMap[96] = true; // `
+  
+  _altGrMap[123] = true; // {
+  _altGrMap[124] = true; // |
+  _altGrMap[125] = true; // }
+  _altGrMap[126] = true; // ~
+}
+
