--- a/locales/fi_FI.lang
+++ b/locales/fi_FI.lang
@@ -1,5 +1,5 @@
 /*
- * Characters that do not work: ^ ~ `
+ * Characters produced by dead keys (^ ~ `) do not work
  */
 
 #define SHIFT 0x80
@@ -100,7 +100,7 @@ const uint8_t _asciimap[128] =
   0x25,          // [
   0x2d,          // bslash
   0x26,          // ]
-  0x23|SHIFT,    // ^
+  0x23,          // ^
   0x38|SHIFT,    // _
   0x2d|SHIFT,    // `
   0x04,          // a
@@ -132,7 +132,7 @@ const uint8_t _asciimap[128] =
   0x24,          // {
   0x36,          // |
   0x27,          // }
-  0x2d|SHIFT,    // ~
+  0x2d,          // ~
   0              // DEL
 };
 
@@ -148,7 +148,10 @@ void initAltGr() {
   _altGrMap[91] = true;  // [
   _altGrMap[92] = true;  // bslash
   _altGrMap[93] = true;  // ]
+  _altGrMap[94] = true;  // ^
+  _altGrMap[96] = true;  // `
   _altGrMap[123] = true; // {
   _altGrMap[124] = true; // |
   _altGrMap[125] = true; // }
+  _altGrMap[126] = true; // ~
 }
