--- a/locales/es_ES.lang
+++ b/locales/es_ES.lang
@@ -1,12 +1,13 @@
 /*
  * _asciimap took from Keyboard.cpp,
- * need somebody to test with spansih layout.
+ * 	Updated by Borja Garduño with the correct keys
  */
 
 #define SHIFT 0x80
+
 const uint8_t _asciimap[128] =
 {
-  0x00,             // NUL
+  0x00,             // NUL          0
   0x00,             // SOH
   0x00,             // STX
   0x00,             // ETX
@@ -16,7 +17,7 @@ const uint8_t _asciimap[128] =
   0x00,             // BEL
   0x2a,      // BS  Backspace
   0x2b,      // TAB  Tab
-  0x28,      // LF  Enter
+  0x28,      // LF  Enter           10
   0x00,             // VT
   0x00,             // FF
   0x00,             // CR
@@ -26,7 +27,7 @@ const uint8_t _asciimap[128] =
   0x00,             // DC1
   0x00,             // DC2
   0x00,             // DC3
-  0x00,             // DC4
+  0x00,             // DC4          20
   0x00,             // NAK
   0x00,             // SYN
   0x00,             // ETB
@@ -36,28 +37,28 @@ const uint8_t _asciimap[128] =
   0x00,             // ESC
   0x00,             // FS
   0x00,             // GS
-  0x00,             // RS
+  0x00,             // RS           30
   0x00,             // US
 
-  0x2c,       //  ' '
-  0x1e|SHIFT,     // !
-  0x34|SHIFT,     // "
-  0x20|SHIFT,    // #
+  0x2c,          //  ' '
+  0x1e|SHIFT,    // !
+  0x1f|SHIFT,    // "
+  0x20,    // #
   0x21|SHIFT,    // $
   0x22|SHIFT,    // %
-  0x24|SHIFT,    // &
-  0x34,          // '
-  0x26|SHIFT,    // (
-  0x27|SHIFT,    // )
-  0x25|SHIFT,    // *
-  0x2e|SHIFT,    // +
+  0x23|SHIFT,    // &
+  0x2d,    // '
+  0x25|SHIFT,    // (               40
+  0x26|SHIFT,    // )
+  0x30|SHIFT,    // *
+  0x30,          // +
   0x36,          // ,
-  0x2d,          // -
+  0x38,          // -
   0x37,          // .
-  0x38,          // /
+  0x24|SHIFT,    // /
   0x27,          // 0
   0x1e,          // 1
-  0x1f,          // 2
+  0x1f,          // 2               50
   0x20,          // 3
   0x21,          // 4
   0x22,          // 5
@@ -65,19 +66,19 @@ const uint8_t _asciimap[128] =
   0x24,          // 7
   0x25,          // 8
   0x26,          // 9
-  0x33|SHIFT,      // :
-  0x33,          // ;
-  0x36|SHIFT,      // <
-  0x2e,          // =
-  0x37|SHIFT,      // >
-  0x38|SHIFT,      // ?
-  0x1f|SHIFT,      // @
+  0x37|SHIFT,      // :
+  0x36|SHIFT,      // ;
+  0x64,            // <             60
+  0x27|SHIFT,      // =
+  0x64|SHIFT,      // > 
+  0x2d|SHIFT,      // ?
+  0x1f,            // @
   0x04|SHIFT,      // A
   0x05|SHIFT,      // B
   0x06|SHIFT,      // C
   0x07|SHIFT,      // D
   0x08|SHIFT,      // E
-  0x09|SHIFT,      // F
+  0x09|SHIFT,      // F             70
   0x0a|SHIFT,      // G
   0x0b|SHIFT,      // H
   0x0c|SHIFT,      // I
@@ -87,7 +88,7 @@ const uint8_t _asciimap[128] =
   0x10|SHIFT,      // M
   0x11|SHIFT,      // N
   0x12|SHIFT,      // O
-  0x13|SHIFT,      // P
+  0x13|SHIFT,      // P             80
   0x14|SHIFT,      // Q
   0x15|SHIFT,      // R
   0x16|SHIFT,      // S
@@ -97,17 +98,17 @@ const uint8_t _asciimap[128] =
   0x1a|SHIFT,      // W
   0x1b|SHIFT,      // X
   0x1c|SHIFT,      // Y
-  0x1d|SHIFT,      // Z
+  0x1d|SHIFT,      // Z             90
   0x2f,          // [
-  0x31,          // bslash
+  0x35,          // bslash
   0x30,          // ]
-  0x23|SHIFT,    // ^
-  0x2d|SHIFT,    // _
-  0x35,          // `
+		0x2f|SHIFT, // ^
+  0x38|SHIFT,    // _
+		0x2f, 	// `
   0x04,          // a
   0x05,          // b
   0x06,          // c
-  0x07,          // d
+  0x07,          // d               100
   0x08,          // e
   0x09,          // f
   0x0a,          // g
@@ -117,7 +118,7 @@ const uint8_t _asciimap[128] =
   0x0e,          // k
   0x0f,          // l
   0x10,          // m
-  0x11,          // n
+  0x11,          // n               110
   0x12,          // o
   0x13,          // p
   0x14,          // q
@@ -127,19 +128,34 @@ const uint8_t _asciimap[128] =
   0x18,          // u
   0x19,          // v
   0x1a,          // w
-  0x1b,          // x
+  0x1b,          // x               120
   0x1c,          // y
   0x1d,          // z
-  0x2f|SHIFT,    // {
-  0x31|SHIFT,    // |
-  0x30|SHIFT,    // }
-  0x35|SHIFT,    // ~
-  0        // DEL
+  0x34,    // {
+  0x1e,   // |
+  0x32,    // }
+  0x21,    // ~
+  0        // DEL                   127
 };
 
-// Init var
+// Init var         
 bool _altGrMap[128];
 bool _altFine = false;
 
 // Individually define all needed char
-void initAltGr() {_altFine = true;}
+void initAltGr() {
+  _altFine = true;
+
+  _altGrMap[126] = true; // ~
+  _altGrMap[123] = true; // {
+  _altGrMap[91] = true;  // [
+  _altGrMap[93] = true;  // ]
+  _altGrMap[125] = true; // }
+  _altGrMap[92] = true;  // bslash
+  _altGrMap[124] = true; // |
+  _altGrMap[64] = true;  // @
+  _altGrMap[35] = true; // #
+  _altGrMap[94] = true; // ^
+  _altGrMap[96] = true; // `
+  _spaceMap[255] = true; // ESPACIO
+ }
