--- a/locales/es_ES.lang
+++ b/locales/es_ES.lang
@@ -1,13 +1,73 @@
-/*
- * _asciimap took from Keyboard.cpp,
- * 	Updated by Borja Garduño with the correct keys
- */
+// WARNING!
+// To write ~, ^ and `, you must to put some word (It will be written) or extra space (won't be written). 
+// Example: To write "~ " (With only one space) you must to write two spaces on your script "~  ".
+// If you are goint to write (~xKEYorWORD), you don't have to worry about it.
+
+// Modified/Fixed by BlueArduino20
+
+#include "Keyboard.h"
+
+#if defined(_USING_HID)
+
+static const uint8_t _hidReportDescriptor[] PROGMEM = {
+
+  //  Keyboard
+    0x05, 0x01,                    // USAGE_PAGE (Generic Desktop)  // 47
+    0x09, 0x06,                    // USAGE (Keyboard)
+    0xa1, 0x01,                    // COLLECTION (Application)
+    0x85, 0x02,                    //   REPORT_ID (2)
+    0x05, 0x07,                    //   USAGE_PAGE (Keyboard)
+   
+  0x19, 0xe0,                    //   USAGE_MINIMUM (Keyboard LeftControl)
+    0x29, 0xe7,                    //   USAGE_MAXIMUM (Keyboard Right GUI)
+    0x15, 0x00,                    //   LOGICAL_MINIMUM (0)
+    0x25, 0x01,                    //   LOGICAL_MAXIMUM (1)
+    0x75, 0x01,                    //   REPORT_SIZE (1)
+    
+  0x95, 0x08,                    //   REPORT_COUNT (8)
+    0x81, 0x02,                    //   INPUT (Data,Var,Abs)
+    0x95, 0x01,                    //   REPORT_COUNT (1)
+    0x75, 0x08,                    //   REPORT_SIZE (8)
+    0x81, 0x03,                    //   INPUT (Cnst,Var,Abs)
+    
+  0x95, 0x06,                    //   REPORT_COUNT (6)
+    0x75, 0x08,                    //   REPORT_SIZE (8)
+    0x15, 0x00,                    //   LOGICAL_MINIMUM (0)
+    0x25, 0x65,                    //   LOGICAL_MAXIMUM (101)
+    0x05, 0x07,                    //   USAGE_PAGE (Keyboard)
+    
+  0x19, 0x00,                    //   USAGE_MINIMUM (Reserved (no event indicated))
+    0x29, 0x65,                    //   USAGE_MAXIMUM (Keyboard Application)
+    0x81, 0x00,                    //   INPUT (Data,Ary,Abs)
+    0xc0,                          // END_COLLECTION
+};
+
+Keyboard_::Keyboard_(void) 
+{
+	static HIDSubDescriptor node(_hidReportDescriptor, sizeof(_hidReportDescriptor));
+	HID().AppendDescriptor(&node);
+}
+
+void Keyboard_::begin(void)
+{
+}
+
+void Keyboard_::end(void)
+{
+}
+
+void Keyboard_::sendReport(KeyReport* keys)
+{
+	HID().SendReport(2,keys,sizeof(KeyReport));
+}
+
+extern
+const uint8_t _asciimap[128] PROGMEM;
 
 #define SHIFT 0x80
-
 const uint8_t _asciimap[128] =
 {
-  0x00,             // NUL          0
+  0x00,             // NUL
   0x00,             // SOH
   0x00,             // STX
   0x00,             // ETX
@@ -15,9 +75,9 @@ const uint8_t _asciimap[128] =
   0x00,             // ENQ
   0x00,             // ACK
   0x00,             // BEL
-  0x2a,      // BS  Backspace
-  0x2b,      // TAB  Tab
-  0x28,      // LF  Enter           10
+  0x2a,     	    // BS  Backspace
+  0x2b,             // TAB  Tab
+  0x28,             // LF  Enter
   0x00,             // VT
   0x00,             // FF
   0x00,             // CR
@@ -27,7 +87,7 @@ const uint8_t _asciimap[128] =
   0x00,             // DC1
   0x00,             // DC2
   0x00,             // DC3
-  0x00,             // DC4          20
+  0x00,             // DC4
   0x00,             // NAK
   0x00,             // SYN
   0x00,             // ETB
@@ -37,7 +97,7 @@ const uint8_t _asciimap[128] =
   0x00,             // ESC
   0x00,             // FS
   0x00,             // GS
-  0x00,             // RS           30
+  0x00,             // RS
   0x00,             // US
 
   0x2c,          //  ' '
@@ -48,7 +108,7 @@ const uint8_t _asciimap[128] =
   0x22|SHIFT,    // %
   0x23|SHIFT,    // &
   0x2d,    // '
-  0x25|SHIFT,    // (               40
+  0x25|SHIFT,    // (
   0x26|SHIFT,    // )
   0x30|SHIFT,    // *
   0x30,          // +
@@ -58,7 +118,7 @@ const uint8_t _asciimap[128] =
   0x24|SHIFT,    // /
   0x27,          // 0
   0x1e,          // 1
-  0x1f,          // 2               50
+  0x1f,          // 2
   0x20,          // 3
   0x21,          // 4
   0x22,          // 5
@@ -68,7 +128,7 @@ const uint8_t _asciimap[128] =
   0x26,          // 9
   0x37|SHIFT,      // :
   0x36|SHIFT,      // ;
-  0x64,            // <             60
+  0x64,            // <
   0x27|SHIFT,      // =
   0x64|SHIFT,      // > 
   0x2d|SHIFT,      // ?
@@ -78,7 +138,7 @@ const uint8_t _asciimap[128] =
   0x06|SHIFT,      // C
   0x07|SHIFT,      // D
   0x08|SHIFT,      // E
-  0x09|SHIFT,      // F             70
+  0x09|SHIFT,      // F
   0x0a|SHIFT,      // G
   0x0b|SHIFT,      // H
   0x0c|SHIFT,      // I
@@ -88,7 +148,7 @@ const uint8_t _asciimap[128] =
   0x10|SHIFT,      // M
   0x11|SHIFT,      // N
   0x12|SHIFT,      // O
-  0x13|SHIFT,      // P             80
+  0x13|SHIFT,      // P
   0x14|SHIFT,      // Q
   0x15|SHIFT,      // R
   0x16|SHIFT,      // S
@@ -98,17 +158,17 @@ const uint8_t _asciimap[128] =
   0x1a|SHIFT,      // W
   0x1b|SHIFT,      // X
   0x1c|SHIFT,      // Y
-  0x1d|SHIFT,      // Z             90
+  0x1d|SHIFT,      // Z
   0x2f,          // [
   0x35,          // bslash
   0x30,          // ]
-		0x2f|SHIFT, // ^
+  0x2f|SHIFT,    // ^
   0x38|SHIFT,    // _
-		0x2f, 	// `
+  0x2f, 	 // `
   0x04,          // a
   0x05,          // b
   0x06,          // c
-  0x07,          // d               100
+  0x07,          // d
   0x08,          // e
   0x09,          // f
   0x0a,          // g
@@ -118,7 +178,7 @@ const uint8_t _asciimap[128] =
   0x0e,          // k
   0x0f,          // l
   0x10,          // m
-  0x11,          // n               110
+  0x11,          // n
   0x12,          // o
   0x13,          // p
   0x14,          // q
@@ -128,14 +188,15 @@ const uint8_t _asciimap[128] =
   0x18,          // u
   0x19,          // v
   0x1a,          // w
-  0x1b,          // x               120
+  0x1b,          // x
   0x1c,          // y
   0x1d,          // z
   0x34,    // {
-  0x1e,   // |
+  0x1e,    // |
   0x32,    // }
-  0x21,    // ~
-  0        // DEL                   127
+  0x21,    // ^
+  0        // DEL
+
 };
 
 // Init var         
@@ -155,6 +216,119 @@ void initAltGr() {
   _altGrMap[124] = true; // |
   _altGrMap[64] = true;  // @
   _altGrMap[35] = true; // #
-  _altGrMap[94] = true; // ^
-  _altGrMap[96] = true; // `
+  
  }
+
+uint8_t USBPutChar(uint8_t c);
+
+// press() adds the specified key (printing, non-printing, or modifier)
+// to the persistent key report and sends the report.  Because of the way
+// USB HID works, the host acts like the key remains pressed until we
+// call release(), releaseAll(), or otherwise clear the report and resend.
+size_t Keyboard_::press(uint8_t k)
+{
+  uint8_t i;
+  if (k >= 136) {      // it's a non-printing key (not a modifier)
+    k = k - 136;
+  } else if (k >= 128) {  // it's a modifier key
+    _keyReport.modifiers |= (1<<(k-128));
+    k = 0;
+  } else {        // it's a printing key
+    int oldKey = k;
+    k = pgm_read_byte(_asciimap + k);
+    if (!k) {
+      setWriteError();
+      return 0;
+    }
+    if (k & 0x80) {            // it's a capital letter or other character reached with shift
+      _keyReport.modifiers |= 0x02;  // the left shift modifier
+      k &= 0x7F;
+    }
+
+    if (!_altFine)
+      initAltGr();
+    if (_altGrMap[oldKey])
+      _keyReport.modifiers |= 0x40;
+  }
+
+  // Add k to the key report only if it's not already present
+  // and if there is an empty slot.
+  if (_keyReport.keys[0] != k && _keyReport.keys[1] != k &&
+    _keyReport.keys[2] != k && _keyReport.keys[3] != k &&
+    _keyReport.keys[4] != k && _keyReport.keys[5] != k) {
+
+    for (i=0; i<6; i++) {
+      if (_keyReport.keys[i] == 0x00) {
+        _keyReport.keys[i] = k;
+        break;
+      }
+    }
+    if (i == 6) {
+      setWriteError();
+      return 0;
+    }
+  }
+  sendReport(&_keyReport);
+  return 1;
+}
+
+// release() takes the specified key out of the persistent key report and
+// sends the report.  This tells the OS the key is no longer pressed and that
+// it shouldn't be repeated any more.
+size_t Keyboard_::release(uint8_t k)
+{
+  uint8_t i;
+  if (k >= 136) {      // it's a non-printing key (not a modifier)
+    k = k - 136;
+  } else if (k >= 128) {  // it's a modifier key
+    _keyReport.modifiers &= ~(1<<(k-128));
+    k = 0;
+  } else {        // it's a printing key
+    int oldKey = k;
+    k = pgm_read_byte(_asciimap + k);
+    if (!k) {
+      return 0;
+    }
+    if (k & 0x80) {              // it's a capital letter or other character reached with shift
+      _keyReport.modifiers &= ~(0x02);  // the left shift modifier
+      k &= 0x7F;
+    }
+
+    if (_altGrMap[oldKey])
+      _keyReport.modifiers &= ~(0x40);
+  }
+
+  // Test the key report to see if k is present.  Clear it if it exists.
+  // Check all positions in case the key is present more than once (which it shouldn't be)
+  for (i=0; i<6; i++) {
+    if (0 != k && _keyReport.keys[i] == k) {
+      _keyReport.keys[i] = 0x00;
+    }
+  }
+
+  sendReport(&_keyReport);
+  return 1;
+}
+
+void Keyboard_::releaseAll(void)
+{
+  _keyReport.keys[0] = 0;
+  _keyReport.keys[1] = 0;
+  _keyReport.keys[2] = 0;
+  _keyReport.keys[3] = 0;
+  _keyReport.keys[4] = 0;
+  _keyReport.keys[5] = 0;
+  _keyReport.modifiers = 0;
+  sendReport(&_keyReport);
+}
+
+size_t Keyboard_::write(uint8_t c)
+{
+  uint8_t p = press(c);  // Keydown
+  release(c);            // Keyup
+  return p;              // just return the result of press() since release() almost always returns 1
+}
+
+Keyboard_ Keyboard;
+
+#endif
